[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "map-protocol"
version = "1.0.0"
description = "MAP v1: deterministic identifiers for structured descriptors"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Aaron Gerard Davidson" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/map-protocol/map1"

[project.scripts]
map1 = "map1._cli:main"

[tool.setuptools.packages.find]
include = ["map1*"]

[tool.setuptools.package-data]
map1 = ["py.typed"]
